--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
+    "@prisma/client": "^4.0.0",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "next": "12.2.2",
+    "next-auth": "^4.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
