--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mui/material": "^5.9.1",
     "@prisma/client": "^4.0.0",
     "axios": "^0.27.2",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "next": "12.2.2",
     "next-auth": "^4.10.0",
     "react": "18.2.0",
