--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
+    "@mui/x-data-grid": "^5.13.1",
     "@prisma/client": "^4.0.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "docxtemplater": "^3.31.2",
+    "file-saver": "^2.0.5",
     "next": "12.2.2",
     "next-auth": "^4.10.0",
+    "pizzip": "^3.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1"
   },
   "devDependencies": {
     "@types/node": "^18.0.6",
